# Secure-OTA-Firmware-Update

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
include/: event.h  mongoose.h  mongoose_config.h
main/: CMakeLists.txt  lcd.c  lcd.h  lvgl_demo_ui.c  main.c  mongoose.c  ota.c
